@@ -5,6 +5,12 @@ module HCl
   module Commands
     class Error < StandardError; end
 
+    # Display a sanitized view of your auth credentials.
+    def config
+      TimesheetResource.config_hash.merge(password:'***').
+        map {|k,v| "#{k}: #{v}" }.join("\n")
+    end
+
     def tasks project_code=nil
       tasks = Task.all
       if tasks.empty? # cache tasks
